Closed Bug 554734 Opened 14 years ago Closed 14 years ago

Workers: crash [@ nsDOMThreadService::Dispatch(nsDOMWorker*, nsIRunnable*, unsigned int, int)]

Categories

(Core :: DOM: Core & HTML, defect)

x86
Windows Vista
defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- .5-fixed

People

(Reporter: wsmwk, Assigned: bent.mozilla)

Details

(Keywords: crash, Whiteboard: [qa-noaction-192])

Crash Data

Attachments

(1 file)

crash [@ nsDOMThreadService::Dispatch(nsDOMWorker*, nsIRunnable*, unsigned int, int)]
#3 top crash for thunderbird 3.1b1 (1.9.2 branch), and one crash on 3.1b2pre -- will wait til 3.1b2 stats or some opinions emerge as to whether this needs to block v3.1

- ms-windows only
- no crashes on 1.9.1 branch or trunk -- which is curious, because I thought we have more thunderbird testers on trunk than on 1.9.2

magnus sez "mThreadPool is null:
http://hg.mozilla.org/releases/mozilla-1.9.2/annotate/f20ea707314c/dom/src/threads/nsDOMThreadService.cpp#l927

(An assertion would have been caused at http://hg.mozilla.org/releases/mozilla-1.9.2/annotate/f20ea707314c/dom/src/threads/nsDOMThreadService.cpp#l898 , but figuring out why we got there is harder.)"


two with no extensions:
bp-84ccd80f-d094-47d1-a452-a192a2100316
bp-48d2298d-9fc8-4b42-b256-543e82100312

bp-e55d2e8f-cb29-4d09-bd2d-c8d912100321 v3.1b1 (c.kopfstein)
0	thunderbird.exe	nsDOMThreadService::Dispatch	 dom/src/threads/nsDOMThreadService.cpp:927
1	thunderbird.exe	nsDOMWorker::FireCloseRunnable	dom/src/threads/nsDOMWorker.cpp:1848
2	thunderbird.exe	nsDOMWorker::TerminateInternal	dom/src/threads/nsDOMWorker.cpp:1901
3	thunderbird.exe	nsDOMWorker::Finalize	dom/src/threads/nsDOMWorker.cpp:1161
4	thunderbird.exe	XPC_WN_Helper_Finalize	js/src/xpconnect/src/xpcwrappednativejsops.cpp:1102
5	js3250.dll	FinalizeObject	js/src/jsgc.cpp:3190
6	js3250.dll	js_GC	js/src/jsgc.cpp:3622
7	js3250.dll	JS_GC	js/src/jsapi.cpp:2439
8	thunderbird.exe	nsXPConnect::Collect	js/src/xpconnect/src/nsXPConnect.cpp:477
9	xpcom_core.dll	nsCycleCollector::Collect	xpcom/base/nsCycleCollector.cpp:2434
10	xpcom_core.dll	nsCycleCollector::Shutdown	xpcom/base/nsCycleCollector.cpp:2660
11	xpcom_core.dll	nsCycleCollector_shutdown	xpcom/base/nsCycleCollector.cpp:3163
12	xpcom_core.dll	mozilla::ShutdownXPCOM	xpcom/build/nsXPComInit.cpp:837
13	thunderbird.exe	ScopedXPCOMStartup::~ScopedXPCOMStartup	toolkit/xre/nsAppRunner.cpp:1032
14	thunderbird.exe	XRE_main	toolkit/xre/nsAppRunner.cpp:3550 

bp-dfdfa5ec-7e3a-4df2-9f9e-c95072100320 3.1b2pre (a.e.st)
bp-4b58cf4f-f874-474b-80dc-2ef202100317 v3.1b1, only enigmail extension (a.e.st)
Component: General → DOM
Product: Thunderbird → Core
QA Contact: general → general
Version: Trunk → 1.9.2 Branch
Attached patch Patch, v1Splinter Review
This should fix us. We're holding a mainthread worker around for too long.
Assignee: nobody → bent.mozilla
Status: NEW → ASSIGNED
Attachment #434722 - Flags: review?(jst)
Summary: crash [@ nsDOMThreadService::Dispatch(nsDOMWorker*, nsIRunnable*, unsigned int, int)] → Workers: crash [@ nsDOMThreadService::Dispatch(nsDOMWorker*, nsIRunnable*, unsigned int, int)]
Version: 1.9.2 Branch → Trunk
Attachment #434722 - Flags: review?(jst) → review+
http://hg.mozilla.org/mozilla-central/rev/ba70445a6c68
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment on attachment 434722 [details] [diff] [review]
Patch, v1

This crash fix is needed on 1.9.2, but not 1.9.1. Low risk and fixes a crash.
Attachment #434722 - Flags: approval1.9.2.3?
Comment on attachment 434722 [details] [diff] [review]
Patch, v1

a=LegNeato for 1.9.2.5. Please ONLY land this on mozilla-1.9.2 default, as we
are still working on 1.9.2.4 on the relbranch
Attachment #434722 - Flags: approval1.9.2.4? → approval1.9.2.5+
Is there anything for QA to reproduce here? Can someone provide an STR for verification?
Whiteboard: [qa-examined-191] [qa-needs-STR]
I don't know how you'd do it offhand... You have to have a GC clean up a worker object after XPCOM has shutdown, and I don't know how to make that happen deterministically.
Ok. Nothing for QA to do here with this then.
Whiteboard: [qa-examined-191] [qa-needs-STR] → [qa-noaction-192]
Crash Signature: [@ nsDOMThreadService::Dispatch(nsDOMWorker*, nsIRunnable*, unsigned int, int)]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: