Bug 554734 - 'Workers: crash [@ nsDOMThreadService::Dispatch]'. r=jst.